products/neo-savant/cd/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-savant-ide
  namespace: neo-savant-ide
  labels:
    "app.kubernetes.io/name": "neo-savant-ide"
spec:
  replicas: 1
  selector:
    matchLabels:
      "app.kubernetes.io/name": "neo-savant-ide"
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        "app.kubernetes.io/name": "neo-savant-ide"
    spec:
      containers:
        - image: neo-savant
          name: neo-savant-ide
          ports:
            - containerPort: 80
