products/neo-savant/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-savant-ide
  namespace: neo-savant-ide
  labels:
    "app.kubernetes.io/name": "neo-savant-ide"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo-savant-ide
                port:
                  number: 80
    - host: dev-ide.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo-savant-ide
                port:
                  number: 80
